Index file edited

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
 <section id="header">
   <div class="bg-dark text-white text-center">
-    <img src="../makeup_artist_website/assrects/logo2.png" class="rounded-circle" style="margin-bottom: 10px;" width="80px" height="85px" alt=""> <h2 style="display: inline-block; padding-top: 0px; font-weight: bolder; font-size: 70px; ">
+    <img src="./assrects/logo2.png" class="rounded-circle" style="margin-bottom: 10px;" width="80px" height="85px" alt=""> <h2 style="display: inline-block; padding-top: 0px; font-weight: bolder; font-size: 70px; ">
       CHHAYA 
     </h2>
   <h6 style="padding-left: 80px;">Make-up Artist and hairstylist</h6><br>
